--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br /> elements if you don't need line 
   In partial fulfillment of the requirements for the degree of
   Bachelor of Science in Computer-Science (class of 2021)
   <br /><br />
-  <a href="https://example.com/resume">View My Resume</a>
+  [View my Resume](Updated Resume.docx)
   <br /><br />
 repository: "MattYanzer/csci-portfolio"
 github_username:  MattYanzer # update with your username
