--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br /> elements if you don't need line 
   In partial fulfillment of the requirements for the degree of
   Bachelor of Science in Computer-Science (class of 2021)
   <br /><br />
-  [View my Resume](Updated Resume.docx)
+  <a href="Updated Resume.docx" alt="View my Resume" download>
   <br /><br />
 repository: "MattYanzer/csci-portfolio"
 github_username:  MattYanzer # update with your username
