--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 # These are used to personalize your new site.
 title: Matthew Yanzer # your name here
-logo: "/images/MattHead.png?raw=true" # your photo (or logo) here
+logo: "/images/MattHead.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br /> elements if you don't need line breaks)
   CSCI 496: Senior Portfolio<br />
   In partial fulfillment of the requirements for the degree of
