--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br /> elements if you don't need line 
   In partial fulfillment of the requirements for the degree of
   Bachelor of Science in Computer-Science (class of 2021)
   <br /><br />
-  <a href="MatthewResume.pdf">View my Resume</a>
+  <a href="Resume.pdf">View my Resume</a>
   <br /><br />
 repository: "MattYanzer/csci-portfolio"
 github_username:  MattYanzer # update with your username
